--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,11 @@
         ],
         "react/no-unused-prop-types": [
             1
-        ]
+        ],
+        "jsx-a11y/anchor-is-valid": [ "error", {
+          "components": [ "Link" ],
+          "specialLink": [ "to" ]
+        }]
     },
     "env": {
         "browser": true
