--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "classnames": "^2.2.5",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "normalizr": "^3.2.4",
@@ -14,11 +15,12 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-select-plus": "^1.0.0-rc.10.patch1",
     "reactstrap": "^5.0.0-alpha.3",
     "redux": "^3.7.2",
-    "redux-api-middleware": "^2.0.0-beta.3",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.1.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "unirest": "^0.5.1"
