--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wowachiever",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jvonasek.github.io/wowachiever",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "classnames": "^2.2.5",
@@ -30,13 +31,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "dl": "node scripts"
+    "dl": "node scripts",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "gh-pages": "^1.1.0"
   }
 }
