--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.19.2",
     "normalizr": "^3.2.4",
     "prop-types": "^15.6.0",
+    "rc-progress": "^2.2.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -24,6 +25,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.1.2",
     "redux-logger": "^3.0.6",
+    "redux-search": "^2.4.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "unirest": "^0.5.1"
