fixed realm selector us/eu name collisions, added lite version of achievement component, various UI imporvements

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "normalizr": "^3.2.4",
+    "numeral": "^2.0.6",
     "prop-types": "^15.6.0",
     "rc-progress": "^2.2.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
