--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "moment": "^2.19.2",
     "normalizr": "^3.2.4",
     "numeral": "^2.0.6",
-    "prop-types": "^15.6.0",
+    "ramda": "^0.25.0",
     "rc-progress": "^2.2.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -41,7 +41,8 @@
     "dl": "node scripts",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "flow": "flow"
+    "flow": "flow",
+    "eslint": "eslint"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
