--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.1.2",
+    "redux-localstorage": "^0.4.1",
     "redux-logger": "^3.0.6",
     "redux-search": "^2.4.0",
     "redux-thunk": "^2.2.0",
