--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "flow": "flow",
-    "eslint": "eslint"
+    "eslint": "eslint src/**/*.js"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
